Start Dialer Activity with explicit intent

--- a/DialerApp/app/src/main/res/layout/activity_dialer.xml
+++ b/DialerApp/app/src/main/res/layout/activity_dialer.xml
@@ -9,4 +9,12 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="hu.ekekft.dialerapp.DialerActivity">
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/number_textView"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        tools:text="+36 20 1234 5678"/>
 </RelativeLayout>
