--- a/DialerApp/app/src/main/res/layout/activity_dialer.xml
+++ b/DialerApp/app/src/main/res/layout/activity_dialer.xml
@@ -6,15 +6,25 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="hu.ekekft.dialerapp.DialerActivity">
+    android:paddingTop="@dimen/activity_vertical_margin">
 
     <TextView
+        android:id="@+id/number_textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/number_textView"
-        android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        tools:text="+36 20 1234 5678"/>
+        android:layout_alignParentTop="true"
+        tools:text="+36 20 1234 5678" />
+
+    <Button
+        android:id="@+id/dial_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_below="@+id/number_textView"
+        android:layout_marginEnd="120dp"
+        android:layout_marginRight="120dp"
+        android:text="Call number" />
 </RelativeLayout>
