--- a/DialerApp/app/src/main/res/layout/activity_main.xml
+++ b/DialerApp/app/src/main/res/layout/activity_main.xml
@@ -1,30 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="hu.ekekft.dialerapp.MainActivity">
+    android:paddingTop="@dimen/activity_vertical_margin">
 
     <EditText
+        android:id="@+id/number_editText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:inputType="phone"
-        android:ems="10"
-        android:id="@+id/number_editText"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:ems="10"
+        android:inputType="phone" />
 
     <Button
+        android:id="@+id/dial_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Dial"
-        android:id="@+id/dial_button"
         android:layout_alignBottom="@+id/number_editText"
+        android:layout_toEndOf="@+id/number_editText"
         android:layout_toRightOf="@+id/number_editText"
-        android:layout_toEndOf="@+id/number_editText" />
+        android:text="Dial" />
+
+    <Button
+        android:id="@+id/implicit_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/number_editText"
+        android:text="Dial Implicit" />
 
 </RelativeLayout>
